--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,5 +2,6 @@ FROM node:18
 WORKDIR /app
 COPY . .
 RUN npm install
+RUN npm run build
 EXPOSE 3000
-CMD ["node", "app.js"]
+CMD ["npx", "serve", "-s", "build"]
