--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,20 @@ services:
     volumes:
       - ./backend:/app
     depends_on:
-      - mongo
+      - mysql
   frontend:
     build: ./client
     ports:
       - "3001:3000"
-  mongo:
-    image: mongo
+  mysql:
+    image: mysql:5.7
     ports:
-      - "27017:27017"
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: apartment_db
     volumes:
-      - mongo-data:/data/db
+      - mysql-data:/var/lib/mysql
 
 volumes:
-  mongo-data:
+  mysql-data:
